<resources>
    <string name="app_name">FlashSocial</string>
    <string name="nav_home">Home</string>
    <string name="nav_learning">Learning</string>
    <string name="nav_stat">Stat</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_item">Add Person</string>
    <string name="setting">Setting</string>
    <string name="folder_name">Folder Name</string>
    <string name="submit">Submit</string>
    <string name="upload_photo">Upload photo</string>
    <string name="take_photo">Take photo</string>
    <string name="remember_this_person">Remember this person?</string>
    <string name="nope">Nope</string>
    <string name="yes">Yes</string>
    <string name="click_to_see_further_detail">Click to see further detail</string>
    <string name="welcome_back_to_flashsocial">Welcome back to FlashSocial</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="role">Role</string>
    <string name="unique_feature">Unique Feature</string>
    <string name="accuracy">Accuracy</string>
    <string name="n_a">N/A</string>
    <string name="the_learning_list_is_currently_empty">The learning list is currently empty.</string>
    <string name="do_you_want_to_reload_again">Do you want to reload again?</string>
    <string name="retry">Retry</string>
    <string name="no_data_to_analyze">No data to analyze.</string>
    <string name="total_cards_you_have_learn">Total cards you have learn:</string>
    <string name="total_number_of_correct_guess">Total number of correct guess:</string>
    <string name="highest_accuracy_rate">Highest accuracy rate:</string>
    <string name="lowest_accuracy_rate">Lowest accuracy rate:</string>
    <string name="average_accuracy_rate">Average accuracy rate:</string>
    <string name="top_5_people_with_highest_accuracy_rate">Top 5 people with highest accuracy rate</string>
    <string name="top_5_people_with_lowest_accuracy_rate">Top 5 people with lowest accuracy rate</string>
    <string name="delete_item">Delete Item</string>
    <string name="delete_all">Delete All</string>
</resources>