<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ItemCreationActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/act_item_creation_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_baseline_close_24"
            app:title="Create User" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/act_item_creation_avt"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_centerInParent="true"
                    android:scaleType="centerCrop"
                    app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Medium"
                    app:srcCompat="@drawable/ic_twotone_image_24" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/act_item_creation_avt_btn_upload"
                    style="@style/Widget.Material3.Button.TonalButton.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_photo"
                    app:icon="@drawable/ic_baseline_add_photo_alternate_24" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/act_item_creation_avt_btn_take"
                    style="@style/Widget.Material3.Button.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/take_photo"
                    app:icon="@drawable/ic_baseline_add_a_photo_24" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="First Name"
                android:paddingVertical="8dp"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:startIconDrawable="@drawable/ic_baseline_person_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/act_item_creation_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Last Name"
                android:paddingVertical="8dp"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:startIconDrawable="@drawable/ic_baseline_person_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/act_item_creation_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/act_item_creation_dob_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Date of birth"
                android:paddingVertical="8dp"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:endIconDrawable="@drawable/ic_baseline_calendar_today_24"
                app:endIconMode="custom"
                app:errorEnabled="true"
                app:startIconDrawable="@drawable/ic_baseline_cake_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/act_item_creation_dob"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Role"
                android:paddingVertical="8dp"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:endIconMode="dropdown_menu"
                app:errorEnabled="true"
                app:startIconDrawable="@drawable/ic_baseline_business_center_24">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/act_item_creation_role"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:completionThreshold="3"
                    android:inputType="textAutoComplete" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Unique Feature"
                android:paddingVertical="8dp"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:startIconDrawable="@drawable/ic_baseline_star_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/act_item_creation_unique_feature"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/act_item_creation_submit_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/submit" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>